--- a/templates/rsnapshot.conf.erb
+++ b/templates/rsnapshot.conf.erb
@@ -5,7 +5,7 @@
 
 config_version	1.2
 
-snapshot_root	<%= @snapshot_root %>
+snapshot_root	<%= @snapshot_root + @private_dir %>
 no_create_root	<%= @no_create_root ? 1 : 0 %>
 
 #################################
